# vigil-llm

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  vigil-server.py
conf/: server.conf
data/vdb/: chroma.sqlite3
