[project]
name = "vigil-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.17",
    "configparser==5.3.0",
    "datasets==2.15.0",
    "flask==3.0.0",
    "httpx==0.27.2",
    "huggingface-hub==0.25.2",
    "loguru==0.7.2",
    "nltk==3.8.1",
    "numpy==1.25.2",
	"openai>=1.86.0,<2.0.0",
    "pandas==2.0.0",
    "pyarrow==14.0.1",
    "pydantic>=2.11.7",
    "sentence-transformers==2.2.2",
    "streamlit==1.26.0",
    "transformers==4.36.0",
    "yara-python==4.3.1",
]
